# api_requests

./: README.md  pyproject.toml
api_requests/: __init__.py  decorators.py  init_args.py
api_requests/details/: __init__.py  _api_method.py  _common.py  _configure.py  _error_handler.py  _header.py  _http_verbs.py  _paginator.py  _query.py
tests/: mock_server.py
